whoami/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
  - host: noobygames.de
    http:
      paths:
      - path: /whoami
        pathType: ImplementationSpecific
        backend:
          service:
            name: whoami
            port:
              number: 80
  tls:
  - hosts:
    - noobygames.de
    secretName: whoami
