whoami/ingressroute-http.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`noobygames.de`) && PathPrefix(`/whoami`)
    kind: Rule
    middlewares:
      - name: redirect-to-https
        namespace: whoami
    services:
    - name: whoami
      port: 80
