whoami/ingressroute-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`noobygames.de`) && PathPrefix(`/whoami`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: letsencrypt
